fix CSS scrollbar issues

--- a/static/event.css
+++ b/static/event.css
@@ -183,7 +183,7 @@ textarea {
 #topnav {
     font-family: 'Merriweather Sans', sans-serif;
 
-    min-width: 1060px;
+    min-width: 1020px;
     height: 40px;
     font-size: 18px;
     background: #666;
@@ -263,10 +263,11 @@ a#puzzhints {
 #topnav > a.urgent { background-color: #c00; }
 
 #nonnav {
+    min-width: 1060px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: calc(100vh - 44px);
+    min-height: calc(100vh - 41px);
 }
 
 #pagetitle {
